<resources>
    <string name="app_name">Mobile Development Problem</string>
    <string name="run_code">Run code</string>
    <string name="clear_output">Clear</string>
    <string name="the_amount_napoleon_label">1. The amount (in Canadian dollars) spent by Napoleon Batz</string>
    <string name="total_quantity_label">2. The number of Awesome Bronze Bags that have sold</string>
    <string name="result_label">Result: </string>
</resources>
