<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#009688"
    tools:context="com.example.s522050.challenge.MainActivity">

    <Button
        android:id="@+id/run_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="runClickHandler"
        android:text="@string/run_code" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="clearClickHandler"
        android:text="@string/clear_output" />

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:id="@+id/total_spent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/output_total_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_amount_napoleon_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/result_spent_label"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/output_total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/output_total_spent"
            android:layout_toRightOf="@+id/result_spent_label"
            android:layout_toEndOf="@+id/result_spent_label"
            android:layout_below="@+id/output_total_label"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="$200"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_below="@+id/total_spent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/output_total_quantity_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_quantity_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/result_quantity_label"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/output_total_quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/output_total_quantity"
            android:layout_toRightOf="@+id/result_quantity_label"
            android:layout_toEndOf="@+id/result_quantity_label"
            android:layout_below="@+id/output_total_quantity_label"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="$200"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"/>

    </RelativeLayout>


</RelativeLayout>
